[gd_scene load_steps=50 format=2]

[ext_resource path="res://Enemies/WalkingCaveExplorer-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Dweller.gd" type="Script" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/IdleCaveExplorer-Sheet.png" type="Texture" id=10]
[ext_resource path="res://Enemies/AttackingCaveExplorer-Sheet.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 11 )
region = Rect2( 240, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 11 )
region = Rect2( 288, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 11 )
region = Rect2( 336, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 11 )
region = Rect2( 432, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 11 )
region = Rect2( 528, 0, 35, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 144, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 288, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 336, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 432, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 34, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 34, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 6.0
height = 14.0

[sub_resource type="CircleShape2D" id=10]
radius = 55.0364

[sub_resource type="CapsuleShape2D" id=11]
radius = 10.7583
height = 13.5167

[sub_resource type="CapsuleShape2D" id=12]
radius = 5.0
height = 6.0

[sub_resource type="CircleShape2D" id=44]
radius = 42.0476

[node name="Dweller" type="KinematicBody2D"]
collision_layer = 17
script = ExtResource( 8 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 1.3, 1 )
texture = ExtResource( 3 )
offset = Vector2( 5, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.1, 1.5 )
frames = SubResource( 7 )
animation = "idle"
frame = 1
playing = true
offset = Vector2( 7, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 7, -16 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 7, -19 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 9, -16 )
rotation = 0.523599
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 7, -15 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="TorchArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchArea"]
position = Vector2( 7, -15 )
shape = SubResource( 44 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="TorchArea" to="." method="_on_TorchArea_area_entered"]
[connection signal="area_exited" from="TorchArea" to="." method="_on_TorchArea_area_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
